[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "istsos4-client"
version = "0.1.0"
description = "Python client for istSOS4 (OGC SensorThings API)"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Daniele Centazzo", email = "centazzoda@gmail.com" },
]
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "https://github.com/istSOS/istsos4-client"

[tool.hatch.build.targets.wheel]
packages = ["src/istsos4_client"]
